# freetype-wasm

./: CMakeLists.txt  LICENSE  README.md  sth.c
lib/: CMakeLists.txt  freetype.patch
lib/setjmp/: setjmp.c  setjmp.cmake  setjmp_core.S
lib/setjmp/inc/: setjmp.h
